# emergent-blog

./: design_guidelines.json
.emergent/: emergent.yml
backend/: AGENTS.md  ARCHITECTURE.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  server.py
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/ai/: urls.py  views.py
backend/apps/accounts/: models.py  urls.py
backend/apps/accounts/api/v1/: login_api.py  logout_api.py  me_api.py  register_api.py  token_refresh_api.py  update_role_api.py  user_list_api.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/repositories/: user_repository.py
backend/apps/accounts/serializers/: register_serializer.py  token_serializer.py  user_serializer.py
backend/apps/accounts/services/: user_service.py
backend/apps/accounts/tests/: test_login_api.py  test_register_api.py
backend/apps/accounts/tests/integration/: test_auth_api_integration.py
backend/apps/ai/: urls.py
backend/apps/ai/api/v1/: assist_api.py  summarize_api.py
backend/apps/ai/services/: ai_service.py
backend/apps/ai/tests/integration/: test_ai_api_integration.py
backend/apps/core/: authentication.py  cookies.py  enums.py  exceptions.py
backend/apps/posts/: models.py  urls.py
backend/apps/posts/api/v1/: admin_post_delete_api.py  admin_post_list_api.py  category_list_api.py  comment_create_api.py  comment_delete_api.py  my_posts_api.py  post_detail_api.py  post_list_api.py  tag_list_api.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_post_views.py
backend/apps/posts/repositories/: category_tag_repository.py  comment_repository.py  post_repository.py
backend/apps/posts/serializers/: category_tag_serializers.py  comment_serializer.py  post_serializers.py
backend/apps/posts/services/: category_service.py  comment_service.py  post_service.py
backend/apps/posts/tests/: test_comment_api.py  test_post_detail_api.py  test_post_list_api.py
backend/apps/posts/tests/integration/: test_posts_api_integration.py
backend/blog_project/: settings.py  urls.py
backend/posts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tests/: test_blog.py
frontend/: AGENTS.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css
frontend/src/api/: client.js
frontend/src/components/: CommentSection.js  Navbar.js  PostCard.js
frontend/src/components/common/: LoadingSpinner.js  Navbar.js  Pagination.js  SkeletonCard.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: AdminDashboard.js  Auth.js  Home.js  PostDetail.js  PostEditor.js  Profile.js
frontend/src/store/: authStore.js
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json
test_reports/pytest/: pytest_results.xml  pytest_results_2.xml
